modified api url according to best practise
